--- a/app/views/funny_plugin/_configuracao_plugin.erb
+++ b/app/views/funny_plugin/_configuracao_plugin.erb
@@ -12,21 +12,26 @@
                           <p><label for="settings_limiteColetaMensal">Dia limite da Coleta Mensal</label></p>
                           <input type="number" id="settings_limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
                        </div>
-                       
-                     </div>
+                 </div>
+
+                 <div class="row mb-3">
+                   <div class="col-md-6">
+                      <p><label for="limiteColetaAnual">Data limite da Coleta Anual</label></p>
+                      <input type="date" id="limiteColetaAnual " value="<%= settings['limiteColetaAnual'] %>" name="settings[limiteColetaAnual]" required style="width:90%"/>
+                   </div>
+                 </div>
 
                      <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><label for="limiteColetaAnual ">Data limite da Coleta Anual</label></p>
-                          <input type="date" id="limiteColetaAnual " value="<%= settings['limiteColetaAnual '] %>" name="settings[limiteColetaAnual ]" required style="width:90%"/>
+                          <p><label for="limiteColetaAnualmente">Data limite da Coleta Anual</label></p>
+                          <input type="text" id="limiteColetaAnualmente" value="<%= settings['limiteColetaAnualmente'] %>" name="settings[limiteColetaAnualmente]" required style="width:90%"/>
                        </div>
-                       
                      </div>
 
-                        <div class="row mb-3">
+                    <div class="row mb-3">
                        <div class="col-md-6">
                           <p><label for="limiteColetaSemestralPrim ">Data limite da Coleta Semestral - 1º semestre</label></p>
-                          <input type="date" id="limiteColetaSemestralPrim " value="<%= settings['limiteColetaSemestralPrim '] %>" name="settings[limiteColetaSemestralPrim ]" required style="width:90%"/>
+                          <input type="date" id="limiteColetaSemestralPrim " value="<%= settings['limiteColetaSemestralPrim'] %>" name="settings[limiteColetaSemestralPrim]" required style="width:90%"/>
                        </div>
                        
                      </div>
@@ -34,7 +39,7 @@
                      <div class="row mb-3">
                        <div class="col-md-6">
                           <p><label for="limiteColetaSemestralSeg ">Data limite da Coleta Semestral - 2º semestre</label></p>
-                          <input type="date" id="limiteColetaSemestralSeg " value="<%= settings['limiteColetaSemestralSeg '] %>" name="settings[limiteColetaSemestralSeg ]" required style="width:90%"/>
+                          <input type="date" id="limiteColetaSemestralSeg " value="<%= settings['limiteColetaSemestralSeg'] %>" name="settings[limiteColetaSemestralSeg]" required style="width:90%"/>
                        </div>
                        
                      </div>
