--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -84,7 +84,17 @@
                     <td><%= coleta.tipoColeta %></td>
                     <% if coleta.dataRealizacao.nil? %>
                         <% if coleta.tituloColeta == 'Coleta Mensal' %>
-                          <td><a href="/coleta/mensalfazer?id_coleta=<%= coleta.id %>" class="btn btn-outline-secondary" >Fazer coleta</a> </td>
+                          <td>
+                              <%= form_for coleta, url: coleta_mensalfazer_path do |f| %>
+                                   <%= f.hidden_field :mes, :value => coleta.mes %>
+                                   <%= f.hidden_field :ano, :value => coleta.ano %>
+                                   <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
+                                   <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
+                                   <%= f.hidden_field :project_id, :value => coleta.project_id %>
+                                   <%= f.hidden_field :semestre, :value => coleta.semestre %>
+                                   <%= f.submit "Fazer coleta", class:"btn btn-outline-secondary" %>
+                            <% end %>
+                          </td>
                         <% end %>
                         <% if coleta.tituloColeta == 'Coleta Semestral' %>
                           <td><a href="/coleta/semestralfazer?id_coleta=<%= coleta.id %>" class="btn btn-outline-secondary" >Fazer coleta</a> </td>
