--- a/app/views/coleta/_coleta_anual_encalces_via_satelite.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_via_satelite.html.erb
@@ -1,6 +1,11 @@
 <div class="card-body">
               <%= form_for @coleta, url: coleta_anualatualizar_path do |f| %>
-                   <%= f.hidden_field :id, :value => @coleta.id %>
+                   <%= f.hidden_field :mes, :value => coleta.mes %>
+                   <%= f.hidden_field :ano, :value => coleta.ano %>
+                   <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
+                   <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
+                   <%= f.hidden_field :project_id, :value => coleta.project_id %>
+                   <%= f.hidden_field :semestre, :value => coleta.semestre %>
 
                     <div class="box-title"><%= @coleta.tipoColeta %></div>
                        <div class="box-description">Coleta de dados de acessos:
