--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -36,19 +36,19 @@
             <div class="col-md-4">
                 <div class="custom-box">
                  <div class="box-title">Mensal</div>
-                  <a href="/cliente/index_cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary  text-white" >Filtrar Coleta</a>
+                  <a href="/cliente/cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary  text-white" >Filtrar Coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                 <div class="box-title">Semestral</div>
-                    <a href="/cliente/index_cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary   text-white">Filtrar Coleta</a>
+                    <a href="/cliente/cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary   text-white">Filtrar Coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">Anual</div>
-                    <a href="/cliente/index_cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary   text-white">Filtrar Coleta</a>
+                    <a href="/cliente/cliente?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary   text-white">Filtrar Coleta</a>
                 </div>
             </div>
         </div>
