--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -30,7 +30,7 @@
     </div>
 
 
-<br/><br/>
+<div class="container mt-5">
 <div class="row justify-content-center">
 <br/><br/>
             <div class="col-md-4">
@@ -52,6 +52,7 @@
                 </div>
             </div>
         </div>
+</div>
 
 
 
