--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -95,7 +95,7 @@
                                    <%= f.hidden_field :tipoColeta, :value => coleta.tipoColeta %>
                                    <%= f.hidden_field :project_id, :value => coleta.project_id %>
                                    <%= f.hidden_field :semestre, :value => coleta.semestre %>
-                                  <p><%= f.submit "Fazer coleta" %> class:"btn btn-outline-secondary"</p>
+                                  <p><%= f.submit "Fazer coleta", class:"btn btn-outline-secondary" %> </p>
                             <% end %>
                           </td>
                         <% end %>
