--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -82,7 +82,7 @@
                 <tr>
                     <td><%= coleta.textoData %></td>
                     
-                     <td><span class="badge rounded-pill <%= coleta.status == 'Aguardando Coleta' ? 'bg-danger' : coleta.status == 'Coleta Enviada' ? 'bg-success' : 'bg-secondary' %>"><%= coleta.status %></span></td>
+                     <td><span class="badge rounded-pill <%= coleta.status == 'Aguardando Coleta' ? 'bg-secondary' : coleta.status == 'Coleta Enviada' ? 'bg-success' : 'bg-danger' %>"><%= coleta.status %></span></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
                     <% if coleta.dataRealizacao.nil? %>
