--- a/app/views/coleta/mensalinformar.html.erb
+++ b/app/views/coleta/mensalinformar.html.erb
@@ -7,7 +7,7 @@
   <%= render "coleta/coleta_mensal_scm" %>
 <% end %>
 
-<% if @coleta.tipoColeta == 'TVpA' %>
+<% if @coleta.tipoColeta == 'TvPA' %>
   <%= render "coleta/coleta_mensal_tvpa" %>
 <% end %>
 
