--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -29,7 +29,7 @@
                          <% listaSelectMunicipio << [municipio.nome, municipio.nome ] %>
                     <% end %>
                      <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
-                     <p><%= f.select :cidade, options_for_select(listaSelectMunicipio) {}, class:'form-select'  %></p>
+                     <p><%= f.select :cidade, id: "cidade", options_for_select(listaSelectMunicipio) {}, class:'form-select'  %></p>
                </div>
              </div>
 
@@ -49,7 +49,7 @@
 
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
-      const selectElement = document.getElementById('coleta_cidade');
+      const selectElement = document.getElementById('cidade');
 
       if (selectElement) {
         selectElement.addEventListener('change', (event) => {
