--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -28,7 +28,7 @@
                     <% for municipio in @municipios %>
                          <% listaSelectMunicipio << [municipio.nome, municipio.nome ] %>
                     <% end %>
-                     <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
+                     <p><%= f.label :cidade, "Cidade" %></p>
                      <p><%= f.select :cidade, id: "cidade", options_for_select(listaSelectMunicipio) {}, class:'form-select'  %></p>
                </div>
              </div>
