--- a/app/views/coleta/mensalcidadesuf.html.erb
+++ b/app/views/coleta/mensalcidadesuf.html.erb
@@ -49,7 +49,7 @@
 
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
-      const selectElement = document.getElementById('cidade');
+      const selectElement = document.getElementById('coleta_cidade');
 
       if (selectElement) {
         selectElement.addEventListener('change', (event) => {
