--- a/app/views/coleta/anualfazer.html.erb
+++ b/app/views/coleta/anualfazer.html.erb
@@ -1,19 +1,19 @@
 
-        <% if @coleta.tipoColeta == 'enlacesProprios' %>
+        <% if @coleta.tipoColeta == 'Enlaces próprios' %>
           <%= render "coleta/coleta_anual_enlaces_proprios" %>
         <% end %>
         
-        <% if @coleta.tipoColeta == 'encalcesContratados' %>
+        <% if @coleta.tipoColeta == 'Encalces contratados' %>
           <%= render "coleta/coleta_anual_encalces_contratados" %>
         <% end %>
         
-        <% if @coleta.tipoColeta == 'encalcesViaSatelite' %>
+        <% if @coleta.tipoColeta == 'Encalces via satélite' %>
           <%= render "coleta/coleta_anual_encalces_via_satelite" %>
         <% end %>
 
 
 
-  <% if @coleta.tipoColeta == 'estacao' %>
+  <% if @coleta.tipoColeta == 'Estação' %>
 
     <%= form_for @coleta, url: coleta_anualcidadesuf_path, :html => {:id => "formColeta"} do |f| %>
          <%= f.hidden_field :mes, :value => @coleta.mes %>
