--- a/app/views/coleta/_coleta_anual_estacao.html.erb
+++ b/app/views/coleta/_coleta_anual_estacao.html.erb
@@ -54,7 +54,7 @@
                       </div>
                        <div class="col-md-6">
                           <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
-                          <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Cidade", required: true %></p>
+                          <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Cidade", disabled: true, required: true %></p>
                         </div>
                     </div>
 
