--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -27,6 +27,7 @@
                
             </div>
         </div>
+        <%= link_to("Recibos", project_documents_path(projetoPreenchimento), :class => projetoPreenchimento.css_classes).html_safe %>
     </div>
 
 
