--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -53,6 +53,9 @@
                 </div>
             </div>
         </div>
+
+  <%= link_to "Recibos", project_documents_path(@projetoPreenchimento), class: "btn btn-primary #{@projetoPreenchimento.css_classes}" %>
+
     </div>
 
 
