--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-  <%= link_to "Recibos", project_documents_path(@projetoPreenchimento), class: "btn btn-primary #{@projetoPreenchimento.css_classes}" %>
+        <%= link_to("Recibos", project_documents_path(@projetoPreenchimento), :class => @projetoPreenchimento.css_classes).html_safe %>
 
     </div>
 
