--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -15,7 +15,7 @@
                     <strong>Serviços de Telecom:</strong> <%= @organizacao.servicos %>
                 </div>
                
-               
+              <p><%= link_to("Recibos", project_documents_path(@projetoPreenchimento), :class => @projetoPreenchimento.css_classes).html_safe %></p>
             </div>
         </div>
     </div>
