--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -50,6 +50,16 @@
                         </div>
                     </div>
 
+                     <div class="row mb-3">
+                       <div class="col-md-6">
+                          <p><%= f.text_field :cnpjContratada, class: "form-control", id: "cnpjContratada", placeholder: "Digite o CNPJ da Empresa contratada", required: true %></p>
+                        </div>
+                       </div>
+
+                        <div class="col-md-6">
+                          <%= f.submit "Adicionar", class:" btn btn-primary" %>
+                        </div>
+                       </div>
                     
                                                                           
                      <%= f.submit "Adicionar", class:" btn btn-primary" %>
