--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -57,7 +57,7 @@
                        
 
                         <div class="col-md-6">
-                          <%= f.submit "Adicionar", class:" btn btn-primary" %>
+                          <%= f.submit "Sair", class:" btn btn-primary" %>
                         </div>
                        </div>
                     
