--- a/app/views/coleta/anualfazer.html.erb
+++ b/app/views/coleta/anualfazer.html.erb
@@ -11,6 +11,7 @@
           <%= render "coleta/coleta_anual_encalces_via_satelite" %>
         <% end %>
 
+<h2>Coloca a tabela com os registros aqui</h2>
 
 
   <% if @coleta.tipoColeta == 'Estação' %>
