--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -69,4 +69,23 @@
                <% end %>
 
   </div>
+
+    <table class="table table-custom">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">CNPJ</th>
+                    <th scope="col">Ano</th>
+                    <th scope="col">Id da estação de origem</th>
+                    <th scope="col">Id da estação de destino</th>
+                    <th scope="col">Id Enlace</th>
+                    <th scope="col">Enlace Meio</th>
+                    <th scope="col">CNPJ da Empresa contratada</th>
+                </tr>
+            </thead>
+            <tbody>
+
+               
+            </tbody>
+        </table>
+
 </div>
