--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -76,6 +76,7 @@
  <br/><br/>
 
 <div class="container">
+  <h4> Lista de Coletas</h4>
     <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
