--- a/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
+++ b/app/views/coleta/_coleta_anual_encalces_contratados.html.erb
@@ -90,7 +90,16 @@
                 </tr>
             </thead>
             <tbody>
-
+             <% for coleta in @coletas %>
+                <tr> <td><%= coleta.cnpj %></td> </tr>
+                <tr> <td><%= coleta.ano %></td> </tr>
+                <tr> <td><%= coleta.idEstacaoOrigem %></td> </tr>
+                <tr> <td><%= coleta.idEstacaoDestino %></td> </tr>
+                <tr> <td><%= coleta.idEnlace %></td> </tr>
+                <tr> <td><%= coleta.enlaceMeio %></td> </tr>
+                <tr> <td><%= coleta.cnpjContratada %></td> </tr>
+            <% end %>
+              
                
             </tbody>
         </table>
