--- a/app/views/coleta/_coleta_anual_estacao.html.erb
+++ b/app/views/coleta/_coleta_anual_estacao.html.erb
@@ -1,4 +1,4 @@
-<div class="card-body">
+<div class="container">
              <%= form_for @coleta, url: coleta_anualatualizar_path, :html => {:id => "formColeta"} do |f| %>
                    <%= f.hidden_field :id, :value => @coleta.id %>
                    <%= f.hidden_field :uf, :value => @coleta.uf %>
