--- a/app/views/coleta/_coleta_mensal_stfc.html.erb
+++ b/app/views/coleta/_coleta_mensal_stfc.html.erb
@@ -1,4 +1,4 @@
-<div class="card-body">
+<div class="container">
               <%= form_for @coleta, url: coleta_mensalatualizar_path do |f| %>
                    <%= f.hidden_field :id, :value => @coleta.id %>
                    <%= f.hidden_field :uf, :value => @coleta.uf %>
