--- a/app/views/coleta/_coleta_semestral_smp.html.erb
+++ b/app/views/coleta/_coleta_semestral_smp.html.erb
@@ -1,4 +1,4 @@
-<div class="card-body">
+<div class="container">
               <%= form_for @coleta, url: coleta_semestralatualizar_path do |f| %>
                    <%= f.hidden_field :mes, :value => @coleta.mes %>
                    <%= f.hidden_field :ano, :value => @coleta.ano %>
