--- a/app/views/coletaanual/fazerEncalcesContratados.html.erb
+++ b/app/views/coletaanual/fazerEncalcesContratados.html.erb
@@ -8,7 +8,7 @@
                    <%= f.hidden_field :semestre, :value => @coleta.semestre %>
 
                     <div class="box-title"><%= @coleta.tipoColeta %></div>
-                   <%=  @coleta.mes - @coleta.ano @coleta.tituloColeta - @coleta.tipoColeta - @coleta.project_id @coleta.semestre %>
+                   <%=  @coleta.mes + '-' + @coleta.ano @coleta.tituloColeta + '-' + @coleta.tipoColeta + '-' + @coleta.project_id + '-' + @coleta.semestre %>
                          
                        <div class="row mb-3">
                          <div class="col-md-6">
