--- a/app/views/coletaanual/fazerEncalcesContratados.html.erb
+++ b/app/views/coletaanual/fazerEncalcesContratados.html.erb
@@ -54,7 +54,8 @@
                        
 
                         <div class="col-md-6">
-                          <%= f.submit "Concluir", class:" btn btn-primary" %>
+                          <%= button_to 'Concluir', cliente_cliente_path, method: :get, class: 'btn btn-primary' %>
+
                         </div>
                        </div>
                     
