--- a/app/views/coletaanual/fazerEncalcesContratados.html.erb
+++ b/app/views/coletaanual/fazerEncalcesContratados.html.erb
@@ -54,7 +54,7 @@
                        
 
                         <div class="col-md-6">
-                          <%= button_to 'Concluir', cliente_cliente_path, method: :get, class: 'btn btn-primary' %>
+                          <%= button_to 'Concluir', onclick: "window.location='#{cliente_cliente_path}'", class: 'btn btn-primary' %>
 
                         </div>
                        </div>
