--- a/app/views/coletaanual/fazerEncalcesContratados.html.erb
+++ b/app/views/coletaanual/fazerEncalcesContratados.html.erb
@@ -55,7 +55,7 @@
                <% end %>
 
                         <div class="col-md-6">
-                          <%= button_to 'Concluir', onclick: "window.location='#{cliente_cliente_path}'", class: 'btn btn-primary' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
 
                         </div>
                        </div>
