--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -115,7 +115,7 @@
                         <% end %>
                         <% if coleta.tituloColeta == 'Coleta Anual' %>
                            <td>
-                              <%= form_for coleta, url: coleta_anual_fazerencalcescontratados_path do |f| %>
+                              <%= form_for coleta, url: coleta_anual_fazer_path do |f| %>
                                    <%= f.hidden_field :mes, :value => coleta.mes %>
                                    <%= f.hidden_field :ano, :value => coleta.ano %>
                                    <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
