--- a/app/views/coletamensal/fazer.html.erb
+++ b/app/views/coletamensal/fazer.html.erb
@@ -1,12 +1,64 @@
 
-<% if @coleta.tipoColeta == 'SCM' %>
-  <%= render "coletamensal/fazer_scm" %>
-<% end %>
 
-<% if @coleta.tipoColeta == 'TvPA' %>
-  <%= render "coletamensal/fazer_tvpa" %>
-<% end %>
+    <%= form_for @coleta, url: coletamensal_fazercidadesuf_path, :html => {:id => "formColeta"} do |f| %>
+        <%= f.hidden_field :mes, :value => @coleta.mes %>
+         <%= f.hidden_field :ano, :value => @coleta.ano %>
+         <%= f.hidden_field :tituloColeta, :value => @coleta.tituloColeta %>
+         <%= f.hidden_field :tipoColeta, :value => @coleta.tipoColeta %>
+         <%= f.hidden_field :project_id, :value => @coleta.project_id %>
 
-<% if @coleta.tipoColeta == 'STFC' %>
-  <%= render "coletamensal/fazer_stfc" %>
-<% end %>
+          <div class="box-title"><%= @coleta.tipoColeta %></div>
+             <div class="box-description">Coleta de dados de acessos:
+               
+             <div class="row mb-3">
+               <div class="col-md-6">
+                    <p><%= f.label :uf, "Selecione a UF" %></p>
+                    <% listaSelectUf = [] %>
+                    <% listaSelectUf << ["Selecione", "" ] %>
+                    <% listaSelectMunicipio = [] %>
+                    <% for uf in @ufs %>
+                         <% listaSelectUf << [uf.sigla + " - " + uf.nome, uf.sigla ] %>
+                    <% end %>
+                    <% for municipio in @municipios %>
+                         <% listaSelectMunicipio << [municipio.nome, municipio.id ] %>
+                    <% end %>
+    
+    
+                    <p><%= f.select :uf, options_for_select(listaSelectUf) {}, {:selected => "Selecione uma UF"}, class:'form-select' %></p>
+               </div>
+             </div>
+
+             <div class="row mb-3">
+               <div class="col-md-6">
+                     <p><%= f.label :cidade, "Cidade", class: "form-label" %></p>
+                      <p><%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
+               </div>
+             </div>
+
+             <div class="row mb-3">
+               <div class="col-md-6">
+                  <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
+                  <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
+               </div>
+             </div>
+  
+
+           </div>
+         </div>
+
+     <% end %>
+
+  
+
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', () => {
+      const selectElement = document.getElementById('coleta_uf');
+
+      if (selectElement) {
+        selectElement.addEventListener('change', (event) => {
+          const form = document.getElementById('formColeta');
+          form.submit();
+        });
+      }
+    });
+  </script>            
