--- a/app/views/coleta/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coleta/coletamensal/_fazer_scm.html.erb
@@ -93,9 +93,15 @@
                        </div>
                      </div>
           
-                     <%= f.submit "Adicionar", class:" btn btn-primary" %>
+                     <div class="row mb-3">
+                       <div class="col-md-6">
+                          <%= f.submit "Adicionar", class:" btn btn-primary" %>
+                        </div>
+                        <div class="col-md-6">
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
 
-
+                        </div>
+                      </div>
 
                <% end %>
 
