--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -89,7 +89,7 @@
                     <% if coleta.dataRealizacao.nil? %>
                         <% if coleta.tituloColeta == 'Coleta Mensal' %>
                           <td>
-                              <%= form_for coleta, url: coleta_mensalfazer_path do |f| %>
+                              <%= form_for coleta, url: coleta_mensal_fazeruf_path do |f| %>
                                    <%= f.hidden_field :mes, :value => coleta.mes %>
                                    <%= f.hidden_field :ano, :value => coleta.ano %>
                                    <%= f.hidden_field :tituloColeta, :value => coleta.tituloColeta %>
