--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -127,10 +127,10 @@
                 <tr> 
                      <td><%= coleta.mes %></td>
                      <td><%= coleta.ano %></td>
-                     <td><%= coleta.tipo %></td>
+                     <td><%= coleta.tipoColeta %></td>
                      <td><%= coleta.uf %></td>
-                     <td><%= coleta.municipio %></td>
-                     <td><%= coleta.codigoIbge %></td>
+                     <td><%= coleta.cidade%></td>
+                     <td><%= coleta.codigoIBGE %></td>
                 </tr>
             <% end %>
               
