--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -118,7 +118,7 @@
                     <th scope="col">Mês</th>
                     <th scope="col">Ano<th>
                     <th scope="col">Tipo</th>
-                    <th scope="c/ol">UF</th>
+                    <th scope="col">UF</th>
                     <th scope="col">Município</th>
                     <th scope="col">Codigo IBGE</th>
                 </tr>
