--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -144,7 +144,7 @@
                      <td><%= coleta.tipoTecnologia%></td> 
                      <td><%= coleta.tipoProduto%></td>
                      <td><%= coleta.velocidade%></td>
-                     <td><%= coleta.quantidadedeAcesso%></td>
+                     <td><%= coleta.quantidadeAcesso%></td>
                      <td><%= coleta.codigoIBGE%></td>
                 </tr>
             <% end %>
