--- a/app/views/coletamensal/_fazer_tvpa.html.erb
+++ b/app/views/coletamensal/_fazer_tvpa.html.erb
@@ -124,7 +124,7 @@
                      <td><%= coleta.tipoAtendimento%></td>
                      <td><%= coleta.tipoMeio%></td>
                      <td><%= coleta.codigoIBGE%></td>
-                     <td><%= coleta.quantidadedeAcesso%></td>
+                     <td><%= coleta.quantidadeAcesso%></td>
                      
                 </tr>
             <% end %>
