--- a/app/views/coletamensal/_fazer_stfc.html.erb
+++ b/app/views/coletamensal/_fazer_stfc.html.erb
@@ -111,7 +111,7 @@
                     <th scope="col">Tipo de Atendimento</th>
                     <th scope="col">Tipo Meio</th>
                     <th scope="col">Codigo IBGE</th>
-                    <th scope="col">Quantidade de Acessos</th>
+                    <th scope="col">Quantidade</th>
                     
                 </tr>
             </thead>
