--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -126,7 +126,7 @@
                     <th scope="col">Tipo de Tecnologia</th>
                     <th scope="col">Tipo de Produto</th>
                     <th scope="col">Velocidade</th>
-                    <th scope="col">Quantidade de Acessos</th>
+                    <th scope="col">Quantidade</th>
                     <th scope="col">Codigo IBGE</th>
                 </tr>
             </thead>
