--- a/app/views/coletasemestral/_fazer_scm.html.erb
+++ b/app/views/coletasemestral/_fazer_scm.html.erb
@@ -67,6 +67,7 @@
     <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
+                    <th scope="col">Título</th>
                     <th scope="col">CNPJ</th>
                     <th scope="col">Ano</th>
                     <th scope="col">Trimestre</th>
@@ -78,6 +79,7 @@
             <tbody>
              <% for coleta in @coletas %>
                 <tr> 
+                     <td><%= coleta.tituloColeta %></td>
                      <td><%= coleta.cnpj %></td>
                      <td><%= coleta.anoInformado %></td>
                      <td><%= coleta.trimestre %></td>
