--- a/app/views/coletaanual/_fazer_estacao.html.erb
+++ b/app/views/coletaanual/_fazer_estacao.html.erb
@@ -89,4 +89,38 @@
                <% end %>
 
   </div>
+
+
+ <br/><br/>
+
+<div class="container">
+  <h4> Lista de Coletas</h4>
+    <table class="table table-custom">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">CNPJ</th>
+                    <th scope="col">Ano</th>
+                    <th scope="col">Id da estação de origem</th>
+                    <th scope="col">Id da estação de destino</th>
+                    <th scope="col">Id Enlace</th>
+                    <th scope="col">Enlace Meio</th>
+                    <th scope="col">CNPJ da Empresa contratada</th>
+                </tr>
+            </thead>
+            <tbody>
+             <% for coleta in @coletas %>
+                <tr> 
+                     <td><%= coleta.cnpj %></td>
+                     <td><%= coleta.ano %></td>
+                     <td><%= coleta.idEstacaoOrigem %></td>
+                     <td><%= coleta.idEstacaoDestino %></td>
+                     <td><%= coleta.idEnlace %></td>
+                     <td><%= coleta.enlaceMeio %></td>
+                     <td><%= coleta.cnpjContratada %></td> 
+                </tr>
+            <% end %>
+              
+               
+            </tbody>
+        </table>
 </div>
