--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -46,6 +46,15 @@
            </div>
          </div>
 
+         <div class="row mb-3">
+                       
+                        <div class="col-md-6">
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
+
+                        </div>
+                      </div>
+       
+
      <% end %>
 
   
