--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -44,7 +44,7 @@
                 <div class="row mb-3">
                        
                         <div class="col-md-6">
-                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg' %>
 
                         </div>
                       </div>
