--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container-md">
 
     <%= form_for @coleta, url: coleta_mensal_fazercidadesuf_path, :html => {:id => "formColeta"} do |f| %>
         <%= f.hidden_field :mes, :value => @coleta.mes %>
@@ -59,7 +59,7 @@
 
      <% end %>
 
-  
+</div>  
 
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
