--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-md">
               <%= form_for @coleta, url: coleta_mensal_atualizar_path do |f| %>
                    <%= f.hidden_field :id, :value => @coleta.id %>
                    <%= f.hidden_field :uf, :value => @coleta.uf %>
