--- a/app/views/coletamensal/fazercidadesuf.html.erb
+++ b/app/views/coletamensal/fazercidadesuf.html.erb
@@ -1,4 +1,5 @@
-    <%= form_for @coleta, url: coleta_mensal_fazer_path, :html => {:id => "formColeta"} do |f| %>
+<div class="container-md">
+      <%= form_for @coleta, url: coleta_mensal_fazer_path, :html => {:id => "formColeta"} do |f| %>
          <%= f.hidden_field :id, :value => @coleta.id %>
          <%= f.hidden_field :uf, :value => @coleta.uf %>
          <%= f.hidden_field :mes, :value => @coleta.mes %>
@@ -8,17 +9,15 @@
          <%= f.hidden_field :project_id, :value => @coleta.project_id %>
 
           <div class="box-title"><%= @coleta.tipoColeta %></div>
-             <div class="box-description">Coleta de dados de acessos:
+           
                
              <div class="row mb-3">
                <div class="col-md-6">
                     <p><%= f.label :uf, "UF selecionada" %></p>
                     <p><%= f.text_field :uf, class: "form-control", id: "uf", disabled: true %></p>
                </div>
-             </div>
 
-             <div class="row mb-3">
-               <div class="col-md-6">
+                <div class="col-md-6">
                     <% listaSelectMunicipio = [] %>
                     <% listaSelectMunicipio << ["Selecione", "" ] %>
                     <% for municipio in @municipios %>
@@ -27,14 +26,25 @@
                      <p><%= f.label :cidade, "Cidade" %></p>
                      <p><%= f.select :cidade, options_for_select(listaSelectMunicipio) {}, class:'form-select'  %></p>
                </div>
+
+
              </div>
 
+           
              <div class="row mb-3">
                <div class="col-md-6">
                   <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
                   <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo Cidade", disabled: true %></p>
                </div>
              </div>
+
+                           
+                        <div class="col-md-6">
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg text-white' %>
+
+
+                        </div>
+                    
 
             </div>
          </div>
