--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -95,10 +95,10 @@
           
                      <div class="row mb-3">
                        <div class="col-md-6">
-                          <%= f.submit "Adicionar", class: 'btn btn-secondary btn-lg text-white' %>
+                          <%= f.submit "Adicionar", class: 'btn btn-secondary btn-sm text-white' %>
                         </div>
                         <div class="col-md-6">
-                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg text-white' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-sm text-white' %>
 
                         </div>
                       </div>
