--- a/app/views/coletamensal/_fazer_scm.html.erb
+++ b/app/views/coletamensal/_fazer_scm.html.erb
@@ -98,7 +98,7 @@
                           <%= f.submit "Adicionar", class: 'btn btn-secondary text-white' %>
                         </div>
                         <div class="col-md-6">
-                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary  text-white' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
                         </div>
                       </div>
