--- a/app/views/coletamensal/_fazer_tvpa.html.erb
+++ b/app/views/coletamensal/_fazer_tvpa.html.erb
@@ -79,7 +79,7 @@
                           <%= f.submit "Adicionar", class:" btn btn-primary" %>
                         </div>
                         <div class="col-md-6">
-                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
                         </div>
                       </div>
