--- a/app/views/coletaanual/_fazer_encalcesviasatelite.html.erb
+++ b/app/views/coletaanual/_fazer_encalcesviasatelite.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-md">
               <%= form_for @coleta, url: coleta_anual_atualizar_path do |f| %>
                    <%= f.hidden_field :ano, :value => @coleta.ano %>
                    <%= f.hidden_field :tituloColeta, :value => @coleta.tituloColeta %>
@@ -78,7 +78,7 @@
                           <%= f.submit "Adicionar", class:" btn btn-primary" %>
                         </div>
                         <div class="col-md-6">
-                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-primary' %>
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
                         </div>
                        </div>
