--- a/app/views/coletaanual/_fazer_estacao.html.erb
+++ b/app/views/coletaanual/_fazer_estacao.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-md">
              <%= form_for @coleta, url: coleta_anual_atualizar_path, :html => {:id => "formColeta"} do |f| %>
                    <%= f.hidden_field :id, :value => @coleta.id %>
                    <%= f.hidden_field :uf, :value => @coleta.uf %>
@@ -78,9 +78,15 @@
                         </div>
                     </div>
 
+                    <div class="row mb-3">
+                       <div class="col-md-6">
+                          <%= f.submit "Adicionar", class: 'btn btn-secondary text-white' %>
+                        </div>
+                        <div class="col-md-6">
+                          <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
-                                                      
-                     <%= f.submit "Adicionar", class:" btn btn-primary" %>
+                        </div>
+                      </div>
 
 
 
