--- a/app/views/coletaanual/fazercidadesuf.html.erb
+++ b/app/views/coletaanual/fazercidadesuf.html.erb
@@ -33,11 +33,14 @@
                   <p><%= f.label :codigoIBGE, "Código IBGE", class: "form-label" %></p>
                   <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo Cidade", disabled: true %></p>
                </div>
+             </div>
 
-              <div class="col-md-6">
-               <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
+              <div class="row mb-3">
+                <div class="col-md-6">
+                 <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
 
-            </div>
+                </div>
+             </div>
 
 
           </div>
