--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -61,6 +61,32 @@
 
 </div>  
 
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="input1">Input 1</label>
+        <input type="text" class="form-control" id="input1" placeholder="Digite algo">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="input2">Input 2</label>
+        <input type="text" class="form-control" id="input2" placeholder="Digite algo">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="input3">Input 3</label>
+        <input type="text" class="form-control" id="input3" placeholder="Digite algo">
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
       const selectElement = document.getElementById('coleta_uf');
