--- a/app/views/coletamensal/fazeruf.html.erb
+++ b/app/views/coletamensal/fazeruf.html.erb
@@ -41,7 +41,15 @@
                      <p><%= f.text_field :codigoIBGE, class: "form-control", id: "codigoIBGE", placeholder: "Selecione um valor para o campo UF", disabled: true %></p>
                   </div>
                 </div>
-              </div>
+
+               <div class="row mb-3">
+                <div class="col-md-6">
+                 <%= link_to 'Concluir', cliente_cliente_path, class: 'btn btn-secondary btn-lg  text-white' %>
+
+                </div>
+             </div>
+
+             </div>
             </div>
 
            
